tests/baselines/reference/overloadTag1.errors.txt
tests/cases/conformance/jsdoc/overloadTag1.js(27,1): error TS2769: No overload matches this call.
  Overload 1 of 2, '(a: number, b: number): number', gave the following error.
    Argument of type 'string' is not assignable to parameter of type 'number'.
  Overload 2 of 2, '(a: string, b: boolean): string', gave the following error.
    Argument of type 'string' is not assignable to parameter of type 'boolean'.


==== tests/cases/conformance/jsdoc/overloadTag1.js (1 errors) ====
    /**
     * @overload
     * @param {number} a 
     * @param {number} b
     * @returns {number} 
     */
    /**
     * @overload
     * @param {string} a
     * @param {boolean} b
     * @returns {string}
     */
    /**
     * @param {string | number} a
     * @param {string | number} b
     * @returns {string | number}
     */
    export function overloaded(a,b) {
      if (typeof a === "string" && typeof b === "string") {
        return a + b;
      } else if (typeof a === "number" && typeof b === "number") {
        return a + b;
      }
      throw new Error("Invalid arguments");
    }
    overloaded(1,2)
    overloaded("zero", "one")
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(a: number, b: number): number', gave the following error.
!!! error TS2769:     Argument of type 'string' is not assignable to parameter of type 'number'.
!!! error TS2769:   Overload 2 of 2, '(a: string, b: boolean): string', gave the following error.
!!! error TS2769:     Argument of type 'string' is not assignable to parameter of type 'boolean'.